# py_web_module_8_hw

./: .gitignore  README.md  check_connect.py  config.ini  consumer.py  consumer2.py  consumer_email.py  hw1.py  model_part2.py  models.py  producer.py  producer1.py  pyproject.toml  qoutes.json  search_script.py  seed.py  seed_part2.py  tempCodeRunnerFile.js
